Functional Crud 1 table

--- a/Inventory_Management_System/Views/Hop/DeleteConfirm.cshtml
+++ b/Inventory_Management_System/Views/Hop/DeleteConfirm.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Inventory_Management_System.Models.HopDTO
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "View";
 }
 
 <h2>Delete</h2>
@@ -80,7 +80,7 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm("Delete", "Hop", new { id = Model.HopID })) { 
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
