--- a/Inventory_Management_System/Views/Hop/Details.cshtml
+++ b/Inventory_Management_System/Views/Hop/Details.cshtml
@@ -7,6 +7,7 @@
 <h2>Details</h2>
 <!--Details Successfuly displayed-->
 <div>
+    <div>@Html.ActionLink("Delete", "DeleteConfirm", new { id = Model.hop.HopID })</div>
     <h4>Hop</h4>
     <hr />
     <dl class="dl-horizontal">
